# tqdm-multiprocessing

./: .gitignore  Makefile  README.md  config.mk.example  package-lock.json  pyproject.toml  setup.cfg
.circleci/: config.yml
project/: __init__.py  __main__.py
tests/: pytest.ini  test_basic.py  test_mapper.py
tqdm_multiprocessing/: __init__.py  mapper.py
