[metadata]
name = tqdm_multiprocessing
version = 0.1.0
author = Scott Chase Waggener
url = "https://github.com/TidalPaladin/tqdm_multiprocessing"
license_file = LICENSE

[options]
python_requires = >=3.8
packages = find:
install_requires = 
    tqdm

[options.extras_require]
test = 
  pytest
  pytest-mock
  pytest-cov
  coverage
quality = 
  autoflake
  autopep8
  black
  flake8
  isort

[pycodestyle]
max-line-length = 120
